Fix: Added plugins to POM in order to get jacoco report in UI Co-Authored-By: Maurice mauricew@stud.ntnu.no